--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -9,4 +9,13 @@
         color: #fff;
         background-color: $mainBlue;
     }
+    
+    &--testimonials {
+        background-color: #e0e6ef;
+
+        @mixin atMedium {
+            background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+            background-size: cover;
+        }
+    }
 }
