completed the testimonial section

--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,10 +1,16 @@
 .testimonial {
-    background-color: rgba(255, 255, 255, .8);
+    background-color: #ffffffcc;
     padding: 0 18px 1px 18px;
+    margin-bottom: 98px;
 
-    @mixin atMedium {
+    @mixin atLarge {
+        margin-bottom: 0;
         padding: 0 1.8125rem 1px 1.8125rem;
 
+    }
+
+    &--last {
+        margin-bottom: 0;
     }
     &__photo {
         border-radius: 80px;
