Completed Header Section

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,10 +1,12 @@
 .large-hero{
     border-bottom: 10px solid $mainBlue;
     position: relative;
+
     &__image{
         display: block;
     }
     &__text-content{
+        padding-top: 60px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
