--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -27,6 +27,7 @@
             padding-right: 20px;
             float: left;
             display: block;
+
         }
     }
 
@@ -51,6 +52,10 @@
             background-color: transparent;
             font-size: 1rem;
             padding: 12px 0;
+
+            &.is-current-link {
+                color: #fabb69;
+            }
         }
     }
 }
