--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
     }
 
     @mixin atMedium {
+        position: fixed;
         background-color: rgba($mainBlue, .3);
+    }
+
+    &--dark {
+        background-color: rgba(23, 51, 72, .85);
     }
 
     &__btn-container {
@@ -25,6 +30,7 @@
         background-color: $mainBlue;
         padding: 13px 29px;
         left: 50%;
+        transition: transform .3s ease-out;
         transform: translateX(-50%);
         top: 0;
 
@@ -32,6 +38,11 @@
             left: auto;
             transform: translateX(0);
             padding: 25px 36px;
+            transform-origin: 50% 0;
+
+            .site-header--dark & {
+                transform: scale(.58);
+            }
         }
     }
 
